Revert "contact section mobile version fix"
This reverts commit 093c05862c306921c162b89567817ba041631556.

--- a/portfolio2/mediaqueries.css
+++ b/portfolio2/mediaqueries.css
@@ -69,19 +69,9 @@
     flex-wrap: wrap;
   }
   .contact-info-upper-container {
-    width: 70%;
-    gap: 1rem;
-    padding: 1rem;
+    gap: 0.5rem;
+    padding: 0.85rem;
   }
-
-  #phone-icon {
-    padding-left: 24.5px;
-  }
-
-  #location-icon {
-    padding-left: 14px;
-  }
-
   .contact-info-container {
     margin: 0;
   }
